--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -22,7 +22,7 @@
 
     </head>
 
-    <body class="bg-dark" onload="updateSystemList()">
+    <body class="bg-dark" onload="pageLoad()">
 
         <div class="container bg-white pb-4">
 
