--- a/resources/client/login.html
+++ b/resources/client/login.html
@@ -22,7 +22,7 @@
 
     </head>
 
-    <body class="bg-dark" onload="resetLoginForm()">
+    <body class="bg-dark" onload="pageLoad()">
 
         <div class="container bg-white">
 
