--- a/resources/client/config.html
+++ b/resources/client/config.html
@@ -19,6 +19,10 @@
     <link href="/client/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="/client/js/admin.js"></script>
+    <script src="/client/js/configAdmins.js"></script>
+    <script src="/client/js/configImages.js"></script>
+    <script src="/client/js/configCategories.js"></script>
+    <script src="/client/js/configManufacturers.js"></script>
     <script src="/client/js/config.js"></script>
 
 </head>
