--- a/resources/client/config.html
+++ b/resources/client/config.html
@@ -10,14 +10,13 @@
 
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 
-    <script src="/client/js/jquery-3.3.1.min.js"></script>
-    <script src="/client/js/popper.min.js"></script>
-    <script src="/client/js/bootstrap.min.js"></script>
-    <script src="/client/js/js.cookie.min.js"></script>
-    <script src="/client/js/querystring.js"></script>
+    <script src="/client/lib/jquery-3.3.1.min.js"></script>
+    <script src="/client/lib/bootstrap.min.js"></script>
+    <script src="/client/lib/js.cookie.min.js"></script>
 
     <link href="/client/css/bootstrap.min.css" rel="stylesheet">
 
+    <script src="/client/js/querystring.js"></script>
     <script src="/client/js/admin.js"></script>
     <script src="/client/js/configAdmins.js"></script>
     <script src="/client/js/configImages.js"></script>
